--- a/moodle/roles/lamp/tasks/main.yml
+++ b/moodle/roles/lamp/tasks/main.yml
@@ -11,23 +11,23 @@
       name: "{{ packages }}"
     vars:
       packages:
-      - php7.2
-      - php7.2-ldap
-      - php7.2-mysql
-      - php7.2-mbstring
-      - php7.2-xml
-      - php7.2-zip
-      - libapache2-mod-php7.2
-      - php7.2-common
-      - php7.2-xmlrpc 
-      - php7.2-soap 
-      - php7.2-gd
-      - php7.2-cli 
-      - php7.2-curl
-      - php7.2-intl
+      - php7.3
+      - php7.3-ldap
+      - php7.3-mysql
+      - php7.3-mbstring
+      - php7.3-xml
+      - php7.3-zip
+      - libapache2-mod-php7.3
+      - php7.3-common
+      - php7.3-xmlrpc 
+      - php7.3-soap 
+      - php7.3-gd
+      - php7.3-cli 
+      - php7.3-curl
+      - php7.3-intl
       - apache2
-      - mysql-server
-      - mysql-client
+      - default-mysql-server
+      - default-mysql-client
       - python-pymysql
       - python3-pymysql
 
@@ -39,7 +39,7 @@
   - name: Configurando senha do Root
     mysql_user: 
       name: root
+      login_unix_socket: /var/run/mysqld/mysqld.sock
       password: '{{ passwd_new_mysql }}'
       state: present
       login_user: root
-      login_password: '{{ passwd_old_mysql }}'
